--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ table {
 /****************************
             Fonts
 *****************************/
-h1, h2, h3, h4,h5, h6, p, a, .italic {
+h1, h2, h3, h4,h5, h6, p, a, .italic, figcaption {
   font-family:'Fira Sans', sans-serif;
 }
 h1, p{
@@ -88,7 +88,7 @@ h5{
 h6,{
 	font-size:100%;
 }
-p,a {
+p,a, figcaption {
 	font-size: 105%;
 }
 a {
